--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,11 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_destinations() # 6"
+    "def travel_destinations():\n",
+    "    number_of_destinations = travel_destinations\n",
+    "    return travel_destinations"
    ]
   },
   {
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,22 +91,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy']\n",
-    "next_up() # 'argentina'"
+    "def next_up ():\n",
+    "    next_up = []\n",
+    "    for next_up in travel_destinations:\n",
+    "        next_up.append(travel_destinations('argentina'))\n",
+    "        \n",
+    "        return next_up # 'argentina'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['finland', 'canada', 'croatia']\n",
-    "next_up() # 'finland'"
+    "def next_up ():\n",
+    "    next_up = []\n",
+    "    for element in travel_destinations:\n",
+    "        next_up.append(travel_destinations('finland'))\n",
+    "        \n",
+    "        return next_up # 'finland'"
    ]
   },
   {
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "favorite_destination() # 'madagascar'"
+    "def favorite_destination():\n",
+    "    favorite_destinations = []\n",
+    "    for favorite_destinations in travel_destinations:\n",
+    "        travel_destinations.append('madagascar')\n",
+    "        \n",
+    "        return favorite_destinations# 'madagascar'"
    ]
   },
   {
@@ -143,9 +160,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'madagascar'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
@@ -161,22 +189,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    pass"
+    "    for element in travel_destinations:\n",
+    "        print(element.capitalize())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n"
+     ]
+    }
+   ],
    "source": [
-    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries()\n",
+    "# ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
@@ -188,9 +231,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n",
+      "Argentina\n",
+      "Mexico\n",
+      "Italy\n",
+      "Finland\n",
+      "Canada\n",
+      "Croatia\n",
+      "Japan\n"
+     ]
+    }
+   ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']\n",
@@ -229,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
